# Project-Template

./: .env.example  .gitignore  .pre-commit-config-strict.yaml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_commit.py
app/: main.py
app/api/: dependencies.py
app/api/routers/: ai.py  health.py  v1.py
app/config/: config.py  logging.py
app/core/models/: auth.py
app/core/use_cases/: ai_use_cases.py
scripts/: check-strict.sh
tests/unit/: test_health.py
