[project]
name = "my-ai-project"
version = "0.1.0"
description = "Hexagonal Python AI template (uv + FastAPI + pre-commit)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.6",
  "httpx>=0.27",
  "numpy",
  "pandas",
  "scikit-learn",
  "openai>=1.40.0",
  # "sqlalchemy>=2.0",      # if using relational DB
  # "psycopg[binary]>=3.2", # if Postgres
  # "pgvector",             # if pgvector
  "pydantic-settings>=2.10.1",
]

[tool.uv]  # (reserved for uv options if needed)

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", "build", "dist", ".venv", "venv", "logs", "data"]

[tool.ruff.lint]
# Bộ rule gợi ý: gọn mà hiệu quả
select = [
  "E","F",        # pycodestyle/pyflakes
  "I",            # import sort (isort)
  "UP",           # pyupgrade
  "B",            # bugbear
  "SIM",          # simplifications
  "C4",           # comprehensions
  "PIE"           # misc best practices
]
ignore = [
  "D"             # tạm thời bỏ docstring; bật lại khi sẵn sàng
]

[tool.ruff.lint.isort]
known-first-party = ["app","src"]
combine-as-imports = true
force-wrap-aliases = true

[tool.mypy]
python_version = "3.12"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
# Khi bắt đầu có thể nới lỏng cho mượt:
ignore_missing_imports = true
exclude = "(^migrations/|^tests?/fixtures/|^venv/|^.venv/)"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q -ra"
testpaths = ["tests"]
xfail_strict = true
